refactor: Liens ISO vers sites officiels de téléchargement

--- a/pages/system-setup.html
+++ b/pages/system-setup.html
@@ -67,7 +67,7 @@
                                             </h4>
                                             <p style="font-size: 0.9rem; margin: 0; color: var(--second-color);">Rolling-release distribution — customization & AUR package manager.</p>
                                         </div>
-                                        <a href="https://github.com/RomeoCavazza/setup-os/tree/main/arch-linux" target="_blank" onclick="event.stopPropagation();" style="color: var(--first-color); text-decoration: none; font-weight: 600; font-size: 0.85rem; margin-left: 1rem; white-space: nowrap;">ISO</a>
+                                        <a href="https://archlinux.org/download/" target="_blank" onclick="event.stopPropagation();" style="color: var(--first-color); text-decoration: none; font-weight: 600; font-size: 0.85rem; margin-left: 1rem; white-space: nowrap;">ISO</a>
                                     </div>
                                 </div>
                                 
@@ -79,7 +79,7 @@
                                             </h4>
                                             <p style="font-size: 0.9rem; margin: 0; color: var(--second-color);">Declarative configuration — reproducible systems with rollbacks.</p>
                                         </div>
-                                        <a href="https://github.com/RomeoCavazza/setup-os/tree/main/nixos" target="_blank" onclick="event.stopPropagation();" style="color: var(--first-color); text-decoration: none; font-weight: 600; font-size: 0.85rem; margin-left: 1rem; white-space: nowrap;">ISO</a>
+                                        <a href="https://nixos.org/download/" target="_blank" onclick="event.stopPropagation();" style="color: var(--first-color); text-decoration: none; font-weight: 600; font-size: 0.85rem; margin-left: 1rem; white-space: nowrap;">ISO</a>
                                     </div>
                                 </div>
                                 
@@ -91,7 +91,7 @@
                                             </h4>
                                             <p style="font-size: 0.9rem; margin: 0; color: var(--second-color);">Enterprise-grade stability — RHEL-compatible server distribution.</p>
                                         </div>
-                                        <a href="https://github.com/RomeoCavazza/setup-os/tree/main/rocky-linux" target="_blank" onclick="event.stopPropagation();" style="color: var(--first-color); text-decoration: none; font-weight: 600; font-size: 0.85rem; margin-left: 1rem; white-space: nowrap;">ISO</a>
+                                        <a href="https://rockylinux.org/download" target="_blank" onclick="event.stopPropagation();" style="color: var(--first-color); text-decoration: none; font-weight: 600; font-size: 0.85rem; margin-left: 1rem; white-space: nowrap;">ISO</a>
                                     </div>
                                 </div>
                             </div>
