feat: Ajout badges de technologies sur system-setup.html

--- a/pages/system-setup.html
+++ b/pages/system-setup.html
@@ -57,6 +57,17 @@
                         <div class="about__text project-text">
                             <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem; color: var(--second-color); font-weight: 600;">Linux enthusiast & desktop customization</h3>
                             <p style="line-height: 1.6; margin-bottom: 1.5rem;">Explored three different Linux distributions, each offering unique strengths for development workflows. Currently maining GNOME for daily productivity. Passionate about <a href="https://hyprland.org" target="_blank" style="color: var(--first-color); text-decoration: none; font-weight: 600;">Hyprland</a> ricing — a dynamic tiling window manager for Wayland. This repository contains my complete configuration: Hyprland setup, Tabby terminal, and Waybar status bar.</p>
+                            
+                            <div class="badges-container" style="margin: 1.5rem 0; display: flex; flex-wrap: wrap; gap: 0.5rem;">
+                                <img src="https://img.shields.io/badge/Linux-FCC624?logo=linux&logoColor=black" alt="Linux">
+                                <img src="https://img.shields.io/badge/Arch%20Linux-1793D1?logo=arch-linux&logoColor=white" alt="Arch Linux">
+                                <img src="https://img.shields.io/badge/NixOS-5277C3?logo=nixos&logoColor=white" alt="NixOS">
+                                <img src="https://img.shields.io/badge/Rocky%20Linux-10B981?logo=rockylinux&logoColor=white" alt="Rocky Linux">
+                                <img src="https://img.shields.io/badge/Hyprland-7B68EE?logo=hyprland&logoColor=white" alt="Hyprland">
+                                <img src="https://img.shields.io/badge/GNOME-4A86CF?logo=gnome&logoColor=white" alt="GNOME">
+                                <img src="https://img.shields.io/badge/Waybar-9E9E9E?logo=wayland&logoColor=white" alt="Waybar">
+                                <img src="https://img.shields.io/badge/Git-F05032?logo=git&logoColor=white" alt="Git">
+                            </div>
 
                             <div class="distros-grid" style="margin-top: 2rem;">
                                 <div class="seminar-card" onclick="window.open('https://github.com/RomeoCavazza/setup-os/tree/main/arch-linux', '_blank')" style="border: 1px solid rgba(146, 161, 176, 0.3); border-radius: 0.5rem; padding: 1rem; margin-bottom: 1rem; transition: all 0.3s ease; cursor: pointer;">
