feat: refactor workflow-automation page with image stacks and improve project pages

--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -101,9 +101,9 @@
                             </div>
                         </div>
 
-                        <div class="project-buttons">
+                        <div class="project-buttons" style="text-align: center; margin-top: 2rem;">
                             <a href="https://github.com/RomeoCavazza/piscine-epitech" target="_blank" class="button project-btn">
-                                <i class='bx bxl-github'></i> Voir le dépôt complet
+                                <i class='bx bxl-github'></i> View on GitHub
                             </a>
                         </div>
                     </div>
