--- a/pages/system-setup.html
+++ b/pages/system-setup.html
@@ -108,7 +108,7 @@
                             </div>
                         </div>
 
-                        <div class="project-buttons">
+                        <div class="project-buttons" style="text-align: center; margin-top: 2rem;">
                             <a href="https://github.com/RomeoCavazza/setup-os/tree/main" target="_blank" class="button project-btn">
                                 <i class='bx bxl-github'></i> View on GitHub
                             </a>
