--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <meta property="twitter:description" content="AI Engineer spécialisé en LLMs, Agentic AI et architectures cloud.">
         <meta property="twitter:image" content="assets/img/profil-picture.jpg">
 
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/terminal.css">
         <link rel="preconnect" href="https://unpkg.com">
