--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Roméo Cavazza">
         <meta name="robots" content="index, follow">
         
+        <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
         <link rel="canonical" href="https://romeo-cavazza.dev/pages/epitech-training.html">
         <link rel="stylesheet" href="../assets/css/styles.css">
         <link rel="preconnect" href="https://unpkg.com">
