Translate all content to English and fix wording errors

--- a/pages/social-platform.html
+++ b/pages/social-platform.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Plateforme sociale SaaS - FastAPI, PostgreSQL, MeiliSearch. Scraping et analyse de données médias sociaux pour OSINT.">
+        <meta name="description" content="SaaS social platform - FastAPI, PostgreSQL, MeiliSearch. Social media data scraping and analysis for OSINT.">
         <meta name="keywords" content="SaaS, FastAPI, PostgreSQL, MeiliSearch, OSINT, social media, scraping, Meta API, TikTok API">
         <meta name="author" content="Roméo Cavazza">
         <meta name="robots" content="index, follow">
@@ -363,7 +363,7 @@
                             <!-- Logo à droite -->
                             <div style="flex-shrink: 0; display: flex; justify-content: center;">
                                 <a href="https://www.insidr.dev/" target="_blank" style="cursor: pointer;">
-                                    <img src="../assets/img/insider-logo.svg" alt="Veyl.io Logo" style="height: 80px; width: auto; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+                                    <img src="../assets/img/insider-logo.svg" alt="Insider logo" style="height: 80px; width: auto; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
                                 </a>
                             </div>
                         </div>
@@ -379,7 +379,7 @@
                                 cursor: pointer;
                             ">
                                 <img src="../assets/img/social-platform-front_1.png" 
-                                     alt="Veyl.io - Vue principale" 
+                                     alt="Veyl.io - Main view" 
                                      class="stack-image active"
                                      style="
                                          position: absolute;
@@ -392,7 +392,7 @@
                                          box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
                                      ">
                                 <img src="../assets/img/social-platform-front_2.png" 
-                                     alt="Veyl.io - Vue 2" 
+                                     alt="Veyl.io - View 2" 
                                      class="stack-image hidden"
                                      style="
                                          position: absolute;
@@ -405,7 +405,7 @@
                                          box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
                                      ">
                                 <img src="../assets/img/social-platform-front_3.png" 
-                                     alt="Veyl.io - Vue 3" 
+                                     alt="Veyl.io - View 3" 
                                      class="stack-image hidden"
                                      style="
                                          position: absolute;
@@ -550,7 +550,7 @@
                 <div class="work__container work__container--mini">
                     <a href="epitech-training.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/piscine.png" alt="Epitech Training - Formation Python et DevOps">
+                            <img src="../assets/img/piscine.png" alt="Epitech Training - Python and DevOps training">
                         </div>
                         <div class="work__title">
                             <h3>Epitech Training</h3>
@@ -559,7 +559,7 @@
                     
                     <a href="workflow-automation.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/automation.png" alt="Workflow Automation - Automatisation n8n">
+                            <img src="../assets/img/automation.png" alt="Workflow Automation - n8n automation">
                         </div>
                         <div class="work__title">
                             <h3>Workflow Automation</h3>
@@ -568,7 +568,7 @@
                     
                     <a href="system-setup.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/hyprland.jpg" alt="System Setup - Configuration Linux">
+                            <img src="../assets/img/hyprland.jpg" alt="System Setup - Linux configuration">
                         </div>
                         <div class="work__title">
                             <h3>System Setup</h3>
