--- a/pages/workflow-automation.html
+++ b/pages/workflow-automation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Automatisation de workflows - n8n, Make, intégration IA. Pipelines de données et agrégation automatisée.">
+        <meta name="description" content="Workflow automation - n8n, Make, AI integration. Data pipelines and automated aggregation.">
         <meta name="keywords" content="n8n, Make, automation, workflows, AI integration, data pipelines, Airtable">
         <meta name="author" content="Roméo Cavazza">
         <meta name="robots" content="index, follow">
@@ -301,7 +301,7 @@
                                         </div>
                                     </div>
                                     <div class="browser-content">
-                                        <img src="../assets/img/n8n-tiktok.png" alt="TikTok n8n Workflow" class="browser-image n8n-tiktok">
+                                        <img src="../assets/img/n8n-tiktok.png" alt="TikTok n8n workflow" class="browser-image n8n-tiktok">
                                     </div>
                                 </div>
                                 <!-- Browser derrière en cascade -->
@@ -319,7 +319,7 @@
                                         </div>
                                     </div>
                                     <div class="browser-content">
-                                        <img src="../assets/img/database-table.png" alt="Database Table" class="browser-image database-table">
+                                        <img src="../assets/img/database-table.png" alt="Airtable database table" class="browser-image database-table">
                                     </div>
                                 </div>
                             </div>
@@ -357,7 +357,7 @@
                                         </div>
                                     </div>
                                     <div class="browser-content">
-                                        <img src="../assets/img/database-sheet.png" alt="Database Sheet" class="browser-image database-sheet">
+                                        <img src="../assets/img/database-sheet.png" alt="Google Sheets database" class="browser-image database-sheet">
                                     </div>
                                 </div>
                                 <!-- Browser derrière en cascade -->
@@ -375,7 +375,7 @@
                                         </div>
                                     </div>
                                     <div class="browser-content">
-                                        <img src="../assets/img/make-ai.png" alt="Make AI Workflow" class="browser-image make-ai">
+                                        <img src="../assets/img/make-ai.png" alt="Make AI workflow" class="browser-image make-ai">
                                     </div>
                                 </div>
                             </div>
@@ -413,7 +413,7 @@
                                         </div>
                                     </div>
                                     <div class="browser-content">
-                                        <img src="../assets/img/front-end.png" alt="Frontend Dashboard" class="browser-image front-end">
+                                        <img src="../assets/img/front-end.png" alt="Frontend dashboard" class="browser-image front-end">
                                     </div>
                                 </div>
                                 <!-- Browser derrière en cascade -->
@@ -431,7 +431,7 @@
                                         </div>
                                     </div>
                                     <div class="browser-content">
-                                        <img src="../assets/img/n8n-gmail.png" alt="Gmail n8n Workflow" class="browser-image n8n-gmail">
+                                        <img src="../assets/img/n8n-gmail.png" alt="Gmail n8n workflow" class="browser-image n8n-gmail">
                                     </div>
                                 </div>
                             </div>
@@ -466,7 +466,7 @@
                 <div class="work__container work__container--mini">
                     <a href="epitech-training.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/piscine.png" alt="Epitech Training - Projets Python et Linux">
+                            <img src="../assets/img/piscine.png" alt="Epitech Training - Python and Linux projects">
                         </div>
                         <div class="work__title">
                             <h3>Epitech Training</h3>
@@ -475,7 +475,7 @@
                     
                     <a href="social-platform.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/osint.jpg" alt="Social Platform - Intelligence sociale OSINT">
+                            <img src="../assets/img/osint.jpg" alt="Social Platform - OSINT social intelligence">
                         </div>
                         <div class="work__title">
                             <h3>Social Platform</h3>
@@ -484,7 +484,7 @@
                     
                     <a href="system-setup.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/hyprland.jpg" alt="System Setup - Configuration Hyprland">
+                            <img src="../assets/img/hyprland.jpg" alt="System Setup - Hyprland configuration">
                         </div>
                         <div class="work__title">
                             <h3>System Setup</h3>
