Use PNG favicon directly instead of ICO conversion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <meta property="twitter:description" content="AI Engineer specialized in LLMs, Agentic AI and cloud architectures.">
         <meta property="twitter:image" content="assets/img/profil-picture.jpg">
 
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/terminal.css">
         <link rel="preconnect" href="https://unpkg.com">
