Replace osint.jpg with veylio.png and add MeiliSearch mention + badge

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     
                     <div class="work__item">
                         <div class="work__img">
-                            <img src="assets/img/osint.jpg" alt="Social Platform - OSINT data visualization and social intelligence" loading="lazy">
+                            <img src="assets/img/veylio.png" alt="Social Platform - OSINT data visualization and social intelligence" loading="lazy">
                         </div>
                         <div class="work__item-content">
                             <h3>Social Platform</h3>
