--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -127,7 +127,7 @@
                     
                     <a href="social-platform.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/osint.jpg" alt="Social Platform - Social intelligence platform for OSINT">
+                            <img src="../assets/img/veylio.png" alt="Social Platform - Social intelligence platform for OSINT">
                         </div>
                         <div class="work__title">
                             <h3>Social Platform</h3>
