--- a/pages/social-platform.html
+++ b/pages/social-platform.html
@@ -347,8 +347,14 @@
                                 <h4 style="color: #000; margin-bottom: 1rem; display: flex; align-items: center; gap: 0.5rem;">
                                     <i class='bx bx-brain' style="font-size: 1.5rem; color: var(--first-color);"></i> Strategic Intelligence Platform
                                 </h4>
-                                <p style="font-size: 0.95rem; line-height: 1.6; margin-bottom: 1.5rem; color: var(--second-color);">Born from strategic planning in influence agencies. Real-time social media intelligence and trend analysis.</p>
-                                
+                                <p style="font-size: 0.95rem; line-height: 1.6; margin-bottom: 1rem; color: var(--second-color);">Born from strategic planning in influence agencies. Real-time social media intelligence and trend analysis.</p>
+                                <p style="font-size: 0.85rem; color: var(--second-color); margin: 0 0 1rem 0; display: flex; align-items: center; gap: 0.5rem;">
+                                    Powered by 
+                                    <a href="https://www.meilisearch.com" target="_blank" rel="noopener" style="color: #FF006D; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 0.25rem;">
+                                        <span>MeiliSearch</span>
+                                        <i class='bx bx-link-external' style="font-size: 0.75rem;"></i>
+                                    </a>
+                                </p>
                                 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
                                     <img src="https://img.shields.io/badge/Python-3776AB?logo=python&logoColor=white" alt="Python">
                                     <img src="https://img.shields.io/badge/FastAPI-009688?logo=fastapi&logoColor=white" alt="FastAPI">
@@ -357,7 +363,9 @@
                                     <img src="https://img.shields.io/badge/React-61DAFB?logo=react&logoColor=black" alt="React">
                                     <img src="https://img.shields.io/badge/TypeScript-3178C6?logo=typescript&logoColor=white" alt="TypeScript">
                                     <img src="https://img.shields.io/badge/Docker-2496ED?logo=docker&logoColor=white" alt="Docker">
-                                    <img src="https://img.shields.io/badge/Algolia-5468FF?logo=algolia&logoColor=white" alt="MeiliSearch">
+                                    <a href="https://www.meilisearch.com" target="_blank" rel="noopener" style="display: inline-block;">
+                                        <img src="https://img.shields.io/badge/MeiliSearch-FF006D?logo=meilisearch&logoColor=white" alt="MeiliSearch">
+                                    </a>
                                 </div>
                             </div>
                             
