--- a/pages/system-setup.html
+++ b/pages/system-setup.html
@@ -143,7 +143,7 @@
                     
                     <a href="social-platform.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/osint.jpg" alt="Social Platform - Social intelligence">
+                            <img src="../assets/img/veylio.png" alt="Social Platform - Social intelligence">
                         </div>
                         <div class="work__title">
                             <h3>Social Platform</h3>
