--- a/pages/workflow-automation.html
+++ b/pages/workflow-automation.html
@@ -476,7 +476,7 @@
                     
                     <a href="social-platform.html" class="work__item">
                         <div class="work__img">
-                            <img src="../assets/img/osint.jpg" alt="Social Platform - OSINT social intelligence">
+                            <img src="../assets/img/veylio.png" alt="Social Platform - OSINT social intelligence">
                         </div>
                         <div class="work__title">
                             <h3>Social Platform</h3>
