AmÃ©lioration de la responsivitÃ© et du design - Centrage des Ã©lÃ©ments GitHub/Discord, bordures arrondies pour les images cascade, ajustements du bouton Discord

--- a/index.html
+++ b/index.html
@@ -62,17 +62,19 @@
 
         <main class="l-main">
             <section class="home bd-grid" id="home">
-                <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Romeo</span><br>AI Engineer</h1>
-                    <div class="home__button-group">
-                        <a href="CAVAZZA_Romeo_Resume.pdf" download class="button button--white home__button">My Resume</a>
-                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=romeo.cavazza@gmail.com" target="_blank" rel="noopener" class="button home__button">Contact Me</a>
+                <div class="home__left">
+                    <div class="home__data">
+                        <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Romeo</span><br>AI Engineer</h1>
+                        <div class="home__button-group">
+                            <a href="CAVAZZA_Romeo_Resume.pdf" download class="button button--white home__button">My Resume</a>
+                            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=romeo.cavazza@gmail.com" target="_blank" rel="noopener" class="button home__button">Contact Me</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="home__social">
-                    <a href="https://www.linkedin.com/in/romeo-cavazza/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/RomeoCavazza" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/in/romeo-cavazza/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/RomeoCavazza" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    </div>
                 </div>
 
                 <div class="home__img">
@@ -86,25 +88,27 @@
                 <h2 class="section-title">About</h2>
                 
                 <div class="about__container bd-grid">
-                    <div class="about__terminal-wrapper">
-                        <div class="container terminal-box terminal-hover">
-                            <div class="terminal_toolbar">
-                                <div class="butt">
-                                    <button class="btn btn-color"></button>
-                                    <button class="btn"></button>
-                                    <button class="btn"></button>
+                    <div class="about__left">
+                        <div class="about__terminal-wrapper">
+                            <div class="container terminal-box terminal-hover">
+                                <div class="terminal_toolbar">
+                                    <div class="butt">
+                                        <button class="btn btn-color"></button>
+                                        <button class="btn"></button>
+                                        <button class="btn"></button>
+                                    </div>
+                                    <p class="user">romeo@dev: ~</p>
                                 </div>
-                                <p class="user">romeo@dev: ~</p>
-                            </div>
-                            <div class="terminal_body terminal-window">
-                                <div class="terminal_wrapper">
-                                    <span class="terminal_user">romeo@dev<span class="terminal_bling">:</span></span><span class="terminal_location">~</span><span class="terminal_bling">$ </span><span id="terminal-command" class="terminal_command"></span><span class="terminal_cursor"></span>
+                                <div class="terminal_body terminal-window">
+                                    <div class="terminal_wrapper">
+                                        <span class="terminal_user">romeo@dev<span class="terminal_bling">:</span></span><span class="terminal_location">~</span><span class="terminal_bling">$ </span><span id="terminal-command" class="terminal_command"></span><span class="terminal_cursor"></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div>
+                    <div class="about__right">
                         <h2 class="about__subtitle">I'm Romeo</h2>
                         <p class="about__text">Artificial intelligence student, passionate about LLMs, Agentic AI, and cloud architectures. My aim is to design systems at the intersection of strategy, human insight, and sovereignty.</p>
                     </div>
@@ -213,7 +217,9 @@
                     
                     <div class="work__item">
                         <div class="work__img">
-                            <img src="assets/img/hyprland.jpg" alt="System Setup - Hyprland and NixOS Linux configuration" loading="lazy">
+                            <a href="https://hypr.land/" target="_blank" rel="noopener noreferrer">
+                                <img src="assets/img/hyprland.jpg" alt="System Setup - Hyprland and NixOS Linux configuration" loading="lazy">
+                            </a>
                         </div>
                         <div class="work__item-content">
                             <h3>System Setup</h3>
