--- a/pages/system-setup.html
+++ b/pages/system-setup.html
@@ -54,7 +54,9 @@
                     <h2 class="section-title">System Setup</h2>
                     
                     <div class="project-container">
-                        <img class="project-img" src="../assets/img/hyprland.jpg" alt="Hyprland configuration - Linux workspace with tiling window manager" width="800" height="600">
+                        <a href="https://hypr.land/" target="_blank" rel="noopener noreferrer">
+                            <img class="project-img" src="../assets/img/hyprland.jpg" alt="Hyprland configuration - Linux workspace with tiling window manager" width="800" height="600">
+                        </a>
                         
                         <div class="about__text project-text">
                             <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem; color: var(--second-color); font-weight: 600;">Linux enthusiast & desktop customization</h3>
