Update portfolio: veyl.io rebrand, Supabase, full Epitech seminars
- Rename insider → veyl.io (logo, links, references)
- Replace MeiliSearch with Supabase across all pages
- Update Meta/TikTok status: now official partner (not under review)
- Add missing Epitech seminars: My First Game (Days 41-55), DevOps (Days 56-60)
- Fix Java seminar days: 31-35 → 31-40
- Add Ansible and libGDX badges
- Rename resume file: CAVAZZA_Romeo_Resume → Romeo_Cavazza_Resume
- Update README.md with Supabase references

--- a/pages/workflow-automation.html
+++ b/pages/workflow-automation.html
@@ -518,7 +518,7 @@
                     
                     <div class="about__text project-text" style="margin-bottom: 2rem;">
                         <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem; color: var(--second-color); font-weight: 600;">No-Code Foundations to Data Intelligence</h3>
-                        <p style="line-height: 1.6; margin-bottom: 1.5rem;">Started with no-code automation (Make, then n8n), then specialized in web scraping, data aggregation, and AI-powered content analysis. This expertise directly inspired the creation of the <a href="social-platform.html" style="color: var(--first-color); text-decoration: none; font-weight: 600;">insider</a> full-stack platform.</p>
+                        <p style="line-height: 1.6; margin-bottom: 1.5rem;">Started with no-code automation (Make, then n8n), then specialized in web scraping, data aggregation, and AI-powered content analysis. This expertise directly inspired the creation of the <a href="social-platform.html" style="color: var(--first-color); text-decoration: none; font-weight: 600;">veyl.io</a> full-stack platform.</p>
                         
                         <div class="badges-container" style="margin: 1.5rem 0; display: flex; flex-wrap: wrap; gap: 0.5rem; align-items: center;">
                             <img src="https://img.shields.io/badge/n8n-EA4C89?logo=n8n&logoColor=white" alt="n8n">
