--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Romeo</span><br>AI Engineer</h1>
                         <div class="home__button-group">
-                            <a href="CAVAZZA_Romeo_Resume.pdf" download class="button button--white home__button">My Resume</a>
+                            <a href="Romeo_Cavazza_Resume.pdf" download class="button button--white home__button">My Resume</a>
                             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=romeo.cavazza@gmail.com" target="_blank" rel="noopener" class="button home__button">Contact Me</a>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         </div>
                         <div class="work__item-content">
                             <h3>Social Platform</h3>
-                            <p>SaaS for social intelligence. FastAPI, PostgreSQL, MeiliSearch. Meta and TikTok APIs.</p>
+                            <p>SaaS for social intelligence. FastAPI, PostgreSQL, Supabase. Meta and TikTok APIs.</p>
                             <div class="work__button-wrapper">
                                 <a href="pages/social-platform.html" class="button work__item-button">View</a>
                             </div>
