--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -23,22 +23,15 @@
                 top: 50%;
                 right: 1rem;
                 transform: translateY(-50%);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 2.2rem;
-                height: 2.2rem;
-                background: var(--first-color);
-                color: #fff;
-                border-radius: 50%;
-                font-size: 1.3rem;
+                color: var(--first-color);
+                font-size: 1.5rem;
                 text-decoration: none;
-                box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-                transition: transform 0.2s, box-shadow 0.2s;
+                transition: transform 0.2s, opacity 0.2s;
+                opacity: 0.8;
             }
             .seminar-github-link:hover {
-                transform: translateY(-50%) scale(1.15);
-                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+                transform: translateY(-50%) scale(1.2);
+                opacity: 1;
             }
         </style>
     </head>
