fix: Corrections linting - styles inline, compatibilité Safari, sécurité liens, accessibilité, formatage Markdown

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                                 <li><a href="pages/workflow-automation.html">Workflow Automation</a></li>
                                 <li><a href="pages/social-platform.html">Social Platform</a></li>
                                 <li><a href="pages/system-setup.html">System Setup</a></li>
+                                <li><a href="pages/shellgeist.html">ShellGeist</a></li>
                             </ul>
                         </li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
@@ -72,8 +73,8 @@
                     </div>
 
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/romeo-cavazza/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://github.com/RomeoCavazza" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                        <a href="https://www.linkedin.com/in/romeo-cavazza/" class="home__social-icon" aria-label="LinkedIn profile" title="LinkedIn profile"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/RomeoCavazza" class="home__social-icon" aria-label="GitHub profile" title="GitHub profile"><i class='bx bxl-github' ></i></a>
                     </div>
                 </div>
 
@@ -93,9 +94,9 @@
                             <div class="container terminal-box terminal-hover">
                                 <div class="terminal_toolbar">
                                     <div class="butt">
-                                        <button class="btn btn-color"></button>
-                                        <button class="btn"></button>
-                                        <button class="btn"></button>
+                                        <button class="btn btn-color" aria-label="Close terminal window" title="Close"></button>
+                                        <button class="btn" aria-label="Minimize terminal window" title="Minimize"></button>
+                                        <button class="btn" aria-label="Maximize terminal window" title="Maximize"></button>
                                     </div>
                                     <p class="user">romeo@dev: ~</p>
                                 </div>
@@ -226,6 +227,19 @@
                             <p>Arch/NixOS configuration with Hyprland. Reproducible and optimized dotfiles.</p>
                             <div class="work__button-wrapper">
                                 <a href="pages/system-setup.html" class="button work__item-button">View</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="work__item">
+                        <div class="work__img">
+                            <img src="assets/img/shellgeist-screenshot.png" alt="ShellGeist - Terminal UI agent powered by LLMs" loading="lazy">
+                        </div>
+                        <div class="work__item-content">
+                            <h3>ShellGeist</h3>
+                            <p>Cyberpunk TUI agent powered by LLMs. Code, navigate, and automate tasks in your terminal.</p>
+                            <div class="work__button-wrapper">
+                                <a href="pages/shellgeist.html" class="button work__item-button">View</a>
                             </div>
                         </div>
                     </div>
