style: Amélioration centrage logo ShellGeist et ajout aux sections Other Projects

--- a/pages/social-platform.html
+++ b/pages/social-platform.html
@@ -848,6 +848,15 @@
                             <h3>System Setup</h3>
                         </div>
                     </a>
+                    
+                    <a href="shellgeist.html" class="work__item">
+                        <div class="work__img">
+                            <img src="../assets/img/shellgeist-screenshot.png" alt="ShellGeist - Cyberpunk TUI AI agent">
+                        </div>
+                        <div class="work__title">
+                            <h3>ShellGeist</h3>
+                        </div>
+                    </a>
                 </div>
             </section>              
         </main>
