--- a/pages/system-setup.html
+++ b/pages/system-setup.html
@@ -153,6 +153,15 @@
                             <h3>Social Platform</h3>
                         </div>
                     </a>
+                    
+                    <a href="shellgeist.html" class="work__item">
+                        <div class="work__img">
+                            <img src="../assets/img/shellgeist-screenshot.png" alt="ShellGeist - Cyberpunk TUI AI agent">
+                        </div>
+                        <div class="work__title">
+                            <h3>ShellGeist</h3>
+                        </div>
+                    </a>
                 </div>
             </section>              
         </main>
