--- a/pages/shellgeist.html
+++ b/pages/shellgeist.html
@@ -80,7 +80,7 @@
 
                         <!-- 5. Features en grille 2x2 -->
                         <div style="margin-bottom: 4rem;">
-                            <h4 class="project-h4-features" style="text-align: center; margin-bottom: 2rem;">✨ Features</h4>
+                            <h4 class="project-h4-features" style="text-align: center; margin-bottom: 2rem;">Features</h4>
                             
                             <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 2rem; max-width: 900px; margin: 0 auto;">
                                 <div style="padding: 1.5rem; background: rgba(146, 161, 176, 0.05); border-radius: 0.75rem; border: 1px solid rgba(146, 161, 176, 0.2);">
@@ -114,7 +114,7 @@
 
                         <!-- 6. Tableau des Commands -->
                         <div style="margin-bottom: 4rem;">
-                            <h4 class="project-h4-features" style="text-align: center; margin-bottom: 2rem;">🎮 Commands</h4>
+                            <h4 class="project-h4-features" style="text-align: center; margin-bottom: 2rem;">Commands</h4>
                             
                             <div class="project-commands-container" style="max-width: 800px; margin: 0 auto;">
                                 <table class="project-table">
